--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "phaser3-project-template",
   "version": "1.1.2",
   "description": "A Phaser 3 Project Template",
-  "main": "src/index.js",
+  "main": "client/src/index.js",
   "scripts": {
     "start": "nodemon server.js"
   },
